--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,1 +1,27 @@
 @import "tailwindcss";
+
+@font-face {
+  font-family: "Inter-SemiBold";
+  src: url("/assets/fonts/InterSemiBold.ttf") format("truetype");
+  font-weight: normal;
+  font-style: normal;
+}
+
+@font-face {
+  font-family: "Inter-Light";
+  src: url("/assets/fonts/InterLight.ttf") format("truetype");
+  font-weight: normal;
+  font-style: normal;
+}
+
+.dev-name {
+  font-size: 18px !important;
+  font-family: "Inter-SemiBold", sans-serif;
+  color: #000000;
+}
+
+.dev-desc {
+  font-size: 14px !important;
+  font-family: "Inter-Light", sans-serif;
+  color: #666666;
+}
