--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,27 +1,32 @@
-@import "tailwindcss";
+@import 'tailwindcss';
 
 @font-face {
-  font-family: "Inter-SemiBold";
-  src: url("/assets/fonts/InterSemiBold.ttf") format("truetype");
+  font-family: 'Inter-SemiBold';
+  src: url('/assets/fonts/InterSemiBold.ttf') format('truetype');
   font-weight: normal;
   font-style: normal;
 }
 
 @font-face {
-  font-family: "Inter-Light";
-  src: url("/assets/fonts/InterLight.ttf") format("truetype");
+  font-family: 'Inter-Light';
+  src: url('/assets/fonts/InterLight.ttf') format('truetype');
   font-weight: normal;
   font-style: normal;
 }
 
 .dev-name {
   font-size: 18px !important;
-  font-family: "Inter-SemiBold", sans-serif;
-  color: #000000;
+  font-family: 'Inter-SemiBold', sans-serif;
+  color: #1a1a1a;
+  line-height: 21.6px !important;
+  letter-spacing: 0.03em !important;
+  font-weight: 600 !important;
 }
 
 .dev-desc {
   font-size: 14px !important;
-  font-family: "Inter-Light", sans-serif;
+  font-family: 'Inter-Light', sans-serif;
   color: #666666;
+  line-height: 16.8px !important;
+  letter-spacing: 0.02em !important;
 }
