--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,15 +1,22 @@
 @import 'tailwindcss';
 
 @font-face {
-  font-family: 'Inter-SemiBold';
-  src: url('/assets/fonts/InterSemiBold.ttf') format('truetype');
+  font-family: 'Inter-Light';
+  src: url('/assets/fonts/InterLight.ttf') format('truetype');
   font-weight: normal;
   font-style: normal;
 }
 
 @font-face {
-  font-family: 'Inter-Light';
-  src: url('/assets/fonts/InterLight.ttf') format('truetype');
+  font-family: 'Inter-Regular';
+  src: url('/assets/fonts/InterRegular.ttf') format('truetype');
+  font-weight: normal;
+  font-style: normal;
+}
+
+@font-face {
+  font-family: 'Inter-SemiBold';
+  src: url('/assets/fonts/InterSemiBold.ttf') format('truetype');
   font-weight: normal;
   font-style: normal;
 }
@@ -29,4 +36,23 @@
   color: #666666;
   line-height: 16.8px !important;
   letter-spacing: 0.02em !important;
+}
+
+.nav-items {
+  font-size: 15px !important;
+  font-family: 'Inter-Regular', sans-serif;
+  color: #666666;
+  line-height: 16.8px !important;
+  letter-spacing: 0.02em !important;
+  transition: all 0.3s cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.nav-items:not(.active):hover {
+  color: #1a1a1a;
+  background-color: #f7f7f7;
+  border-radius: 5px;
+}
+
+.nav-items.active {
+  color: #1a1a1a;
 }
