025 - Enhanced page Layout adding page footer, Added dynamic page update on projects to auto add project cards.

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -66,3 +66,11 @@
 .socials-items:hover {
   color: #1a1a1a;
 }
+
+.pagefooter-text {
+  font-size: 12px !important;
+  font-family: "Inter-Regular", sans-serif;
+  color: #666666;
+  line-height: 14.4px !important;
+  letter-spacing: 0.02em !important;
+}
